ft:add comments
